<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity"
    android:id="@+id/relative_loginmainlayout"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
        android:id="@+id/relative_loginpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30dp"
        >
            <ImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/login_logo"
            />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_login"
                android:layout_marginTop="@dimen/margin_top20"
                android:text="@string/Login"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_login"
                android:textAllCaps="true"
                android:text="@string/Username"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/text_usrSize15"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_top20"
                />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_username"
                android:layout_marginTop="@dimen/margin_top5"
                android:background="@drawable/edt_bg"
                android:textSize="@dimen/text_usrSize15"
                android:textColor="@color/white"
                android:hint="@string/Email"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_10dp"
                android:drawableLeft="@drawable/username_clipart"
                android:drawablePadding="@dimen/padding_20"
                />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_username"
                android:textAllCaps="true"
                android:text="@string/Password"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/text_usrSize15"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_top20"
                />

            <EditText

                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_password"
                android:layout_marginTop="@dimen/margin_top5"
                android:background="@drawable/edt_bg"
                android:textSize="@dimen/text_usrSize15"
                android:textColor="@color/white"
                android:hint="@string/Password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10dp"
               android:drawableLeft="@drawable/password_clipart"
                android:drawablePadding="@dimen/padding_20"
                />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_below="@+id/edt_password"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn_bg"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/paddingleft_70dp"
                android:paddingRight="@dimen/paddingright_70dp"
                />

            <TextView
                android:id="@+id/txt_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_Login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top20"
                android:layout_marginBottom="@dimen/margin_30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
               />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_SignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_top_10dp"
                    android:layout_marginBottom="@dimen/margin_bottom_80dp"
                    />





            <!-- <Button
                 android:id="@+id/btn_Login"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/btn_height"

                 android:layout_marginTop="@dimen/margin_30dp"
                 android:text="@string/Login"
                 android:textColor="@color/white"
                 android:fontFamily="sans-serif-medium"
                 android:background="@drawable/btn_bg"
                 android:layout_centerHorizontal="true"
                 android:paddingLeft="@dimen/paddingleft_70dp"
                 android:paddingRight="@dimen/paddingright_70dp"
                 />

             <TextView
                 android:id="@+id/txt_SignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/btn_Login"
                 android:layout_marginTop="@dimen/margin_top20"
                 android:text="@string/SignUp"
                 android:textSize="@dimen/text_size"
                 android:textColor="@color/white"
                 android:layout_centerHorizontal="true"
                 android:fontFamily="sans-serif-medium"
                 />-->

        </RelativeLayout>



    </ScrollView>



</RelativeLayout>